<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsedBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- TakePhoto -->
    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片...</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>

    <!-- custom multipleimageselect -->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="newbook_top_text">新书上架</string>
    <string name="newbook_item_bookname">2017年版全国计算机等级考试二级教程MS Office高级应用</string>
    <string name="newbook_listview_price">价格 :</string>
    <string name="title_activity_booksmarket">BooksmarketActivity</string>
    <string name="wish_content">求购一本高等数学(一)，由于马上要准备考研，可两年前的高数早就不翼而飞，有不用的可以联系我，谢谢！</string>
    <string name="user_name">小明</string>
    <string name="wish_button">帮助Ta</string>
    <string name="wish_course">高等数学（一）</string>
    <string name="wish_price">加急！开价10元</string>
    <string name="wish_contact">联系方式</string>
    <string name="wish_phone">188888888</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="publishWishesTips">发布心愿单</string>
    <string name="select_album">选择相册</string>
    <string name="select_image">选择图片</string>
    <string name="latest_image">最近照片</string>
    <string name="photo_album">相册</string>
    <string name="main_confirm">确定</string>
    <string name="main_cancel">取消</string>
    <string name="main_back">返回</string>
    <string name="title_activity_personal_message">PersonalMessageActivity</string>

</resources>
