<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.wishlist.WishListActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/wish_headphoto_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/wishlist_icon_headphoto" />

        <TextView
            android:id="@+id/wish_username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/wish_headphoto_img"
            android:text="@string/user_name"
            android:textColor="#43c248"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/wish_boy_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/wish_username_txt"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/wish_username_txt"
            android:src="@drawable/wishlist_icon_boy" />
        
        <TextView 
            android:id="@+id/wish_publish_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3-15 09:40"
            android:textSize="12sp"
            android:textColor="#999999"
            android:layout_below="@id/wish_username_txt"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/wish_headphoto_img"/>

        <Button
            android:id="@+id/wish_help_btn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_help_button"
            android:text="@string/wish_button"
            android:textColor="#43c248"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" >

        <TextView
            android:id="@+id/wish_course_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish_course"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/wish_price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/wish_price"
            android:textColor="#e76424"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/wish_contact_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wish_course_txt"
            android:layout_marginTop="6dp"
            android:text="@string/wish_contact"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wish_phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wish_course_txt"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/wish_contact_txt"
            android:text="@string/wish_phone"
            android:textColor="#43c248"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="6dp"
        android:background="#999999" />

    <TextView
        android:id="@+id/wish_content_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/wish_content"
        android:textColor="#666666"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:drawableLeft="@drawable/wishlist_icon_see"
            android:drawablePadding="10dp"
            android:text="233"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:background="#999999" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:drawableLeft="@drawable/wishlist_icon_commont"
            android:drawablePadding="10dp"
            android:text="23"
            android:textColor="#999999"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>